--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,6 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=update
 #Swagger
+#springdoc.swagger-ui.path=/codex/swagger-ui.html
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 springdoc.paths-to-exclude=/swagger-resources/**
